# openai_ocr_tool

./: .copilot-commit-message-instructions.md  .gitignore  README.md  config.ini.example  main.py  pyproject.toml
