[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.4"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "markdown>=3.9",
    "openai>=2.6.0",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "spire-doc>=13.8.0",
]
